@startuml Diagrama_Entidad_Relacion_Conduser

!theme plain
skinparam roundcorner 5
skinparam shadowing false
skinparam class {
    BackgroundColor white
    ArrowColor #006837
    BorderColor #141b2b
}

entity "users" as users {
  * id : bigint unsigned <<PK>>
  --
  * name : varchar(255)
  * email : varchar(255) <<UNIQUE>>
  email_verified_at : timestamp
  * password : varchar(255)
  * role : enum('root', 'administrador', 'colaborador')
  * status : enum('activo', 'inactivo')
  avatar : varchar(255)
  remember_token : varchar(100)
  created_at : timestamp
  updated_at : timestamp
}

entity "movements" as movements {
  * id : bigint unsigned <<PK>>
  --
  * amount : decimal(10,2)
  * type : enum('ingreso', 'egreso')
  * status : varchar(255)
  * date : date
  associated_to : varchar(255)
  * description : text
  * user_id : bigint unsigned <<FK>>
  created_at : timestamp
  updated_at : timestamp
}

entity "audit_logs" as audit_logs {
  * id : bigint unsigned <<PK>>
  --
  * user_id : bigint unsigned <<FK>>
  * action : varchar(255)
  * model_type : varchar(255)
  * model_id : bigint unsigned
  details : text
  created_at : timestamp
  updated_at : timestamp
}

entity "notifications" as notifications {
  * id : char(36) <<PK>>
  --
  * type : varchar(255)
  * notifiable_type : varchar(255)
  * notifiable_id : bigint unsigned
  * data : text
  read_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity "accounts" as accounts {
  * id : bigint unsigned <<PK>>
  --
  created_at : timestamp
  updated_at : timestamp
}

entity "password_reset_tokens" as password_reset_tokens {
  * email : varchar(255) <<PK>>
  --
  * token : varchar(255)
  created_at : timestamp
}

entity "failed_jobs" as failed_jobs {
  * id : bigint unsigned <<PK>>
  --
  * uuid : varchar(255) <<UNIQUE>>
  * connection : text
  * queue : text
  * payload : longtext
  * exception : longtext
  * failed_at : timestamp
}

entity "personal_access_tokens" as personal_access_tokens {
  * id : bigint unsigned <<PK>>
  --
  * tokenable_type : varchar(255)
  * tokenable_id : bigint unsigned
  * name : varchar(255)
  * token : varchar(64) <<UNIQUE>>
  abilities : text
  last_used_at : timestamp
  expires_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

' Relaciones exactas de Foreing Keys (FK)
users "1" -- "0..*" movements : "Registra (user_id)"
users "1" -- "0..*" audit_logs : "Genera auditoría (user_id)"

@enduml
